# kube-election

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  cliff.toml  codecov.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  update-pr-stack.yml
src/: config.rs  elector.rs  error.rs  leader_election.rs  lib.rs  lock.rs  record.rs
