[package]
name = "kube-election"
version = "0.1.1"
edition = "2021"
publish = true

[features]
default = ["rustls-tls"]
rustls-tls = ["kube/rustls-tls"]
openssl-tls = ["kube/openssl-tls"]

[dependencies]
kube = { version = "3.0", default-features = false, features = ["client"] }
k8s-openapi = { version = "0.27", default-features = false }
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
rustls = "0.23"
